<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".BasicCalculator">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEquals"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toEndOf="@+id/btnDecimal"
            app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDecimal"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toEndOf="@+id/btnZero"
            app:layout_constraintTop_toBottomOf="@+id/btnThree" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnZero"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintEnd_toEndOf="@+id/btnTwo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnOne"
            app:layout_constraintTop_toBottomOf="@+id/btnOne" />

        <Button
            android:id="@+id/btnBackspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintEnd_toEndOf="@+id/btnDivide"
            app:layout_constraintStart_toStartOf="@+id/btnDivide"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnParenthesesOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnParenthesesOpen"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toEndOf="@+id/btnClear"
            app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnClear"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />

        <Button
            android:id="@+id/btnParenthesesClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/btnParenthesesClose"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/btnParenthesesOpen"
            app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDivide"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toEndOf="@+id/btnParenthesesClose"
            app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMultiply"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toEndOf="@+id/btnNine"
            app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNine"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toEndOf="@+id/btnEight"
            app:layout_constraintTop_toBottomOf="@+id/btnParenthesesClose" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEight"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toEndOf="@+id/btnSeven"
            app:layout_constraintTop_toBottomOf="@+id/btnParenthesesOpen" />

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSeven"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClear" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSubtract"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toEndOf="@+id/btnSix"
            app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSix"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toEndOf="@+id/btnFive"
            app:layout_constraintTop_toBottomOf="@+id/btnNine" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFive"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toEndOf="@+id/btnFour"
            app:layout_constraintTop_toBottomOf="@+id/btnEight" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFour"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAdd"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toEndOf="@+id/btnThree"
            app:layout_constraintTop_toBottomOf="@+id/btnSubtract" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnThree"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toEndOf="@+id/btnTwo"
            app:layout_constraintTop_toBottomOf="@+id/btnSix" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnTwo"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toEndOf="@+id/btnOne"
            app:layout_constraintTop_toBottomOf="@+id/btnFive" />

        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnOne"
            android:textColor="@color/tanAccent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFour" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>